# pyspiro

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
pyspiro/: __init__.py  draw_function.py  main.py  spiro.py  spiroanimator.py
src/: __init__.py
src/pyspiro/: cli.py  main.py
